--- a/index.html
+++ b/index.html
@@ -23,28 +23,34 @@
 
 <body class="bg-slate-50 text-slate-700 dark:bg-slate-900 dark:text-slate-300">
 
-    <!-- External JS -->
-    <script src="script.js"></script>
-
     <!-- Header/Navbar -->
-<header id="header" class="sticky top-0 z-40 bg-white/80 dark:bg-slate-900/80 backdrop-blur shadow-sm dark:shadow-md transition-shadow">
+    <header id="header"
+        class="sticky top-0 z-40 bg-white/80 dark:bg-slate-900/80 backdrop-blur shadow-sm dark:shadow-md transition-shadow">
         <div class="container mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex justify-between items-center py-6">
                 <a href="#" class="text-2xl font-bold text-slate-900 dark:text-white tracking-tight">Furqan Naikwadi</a>
                 <nav class="hidden md:flex gap-8">
-                    <a href="#about" class="text-slate-600 hover:text-indigo-600 dark:text-slate-300 dark:hover:text-indigo-400 transition-colors font-medium">About</a>
-                    <a href="#projects" class="text-slate-600 hover:text-indigo-600 dark:text-slate-300 dark:hover:text-indigo-400 transition-colors font-medium">Projects</a>
-                    <a href="#skills" class="text-slate-600 hover:text-indigo-600 dark:text-slate-300 dark:hover:text-indigo-400 transition-colors font-medium">Skills</a>
-                    <a href="#experience" class="text-slate-600 hover:text-indigo-600 dark:text-slate-300 dark:hover:text-indigo-400 transition-colors font-medium">Experience</a>
-                    <a href="#certificates" class="text-slate-600 hover:text-indigo-600 dark:text-slate-300 dark:hover:text-indigo-400 transition-colors font-medium">Certificates</a>
-                    <a href="#contact" class="text-slate-600 hover:text-indigo-600 dark:text-slate-300 dark:hover:text-indigo-400 transition-colors font-medium">Contact</a>
+                    <a href="#about"
+                        class="text-slate-600 hover:text-indigo-600 dark:text-slate-300 dark:hover:text-indigo-400 transition-colors font-medium">About</a>
+                    <a href="#projects"
+                        class="text-slate-600 hover:text-indigo-600 dark:text-slate-300 dark:hover:text-indigo-400 transition-colors font-medium">Projects</a>
+                    <a href="#skills"
+                        class="text-slate-600 hover:text-indigo-600 dark:text-slate-300 dark:hover:text-indigo-400 transition-colors font-medium">Skills</a>
+                    <a href="#experience"
+                        class="text-slate-600 hover:text-indigo-600 dark:text-slate-300 dark:hover:text-indigo-400 transition-colors font-medium">Experience</a>
+                    <a href="#certificates"
+                        class="text-slate-600 hover:text-indigo-600 dark:text-slate-300 dark:hover:text-indigo-400 transition-colors font-medium">Certificates</a>
+                    <a href="#contact"
+                        class="text-slate-600 hover:text-indigo-600 dark:text-slate-300 dark:hover:text-indigo-400 transition-colors font-medium">Contact</a>
                 </nav>
                 <div class="flex items-center gap-4">
-                    <button id="theme-toggle" class="p-2 rounded-full hover:bg-slate-200 dark:hover:bg-slate-800 transition-colors">
+                    <button id="theme-toggle"
+                        class="p-2 rounded-full hover:bg-slate-200 dark:hover:bg-slate-800 transition-colors">
                         <i id="theme-icon" data-lucide="moon" class="w-5 h-5 text-slate-600 dark:text-slate-300"></i>
                     </button>
                     <div class="md:hidden">
-                        <button id="mobile-menu-button" class="text-slate-600 dark:text-slate-300 hover:text-slate-900 dark:hover:text-white focus:outline-none">
+                        <button id="mobile-menu-button"
+                            class="text-slate-600 dark:text-slate-300 hover:text-slate-900 dark:hover:text-white focus:outline-none">
                             <i data-lucide="menu" class="h-6 w-6"></i>
                         </button>
                     </div>
@@ -220,7 +226,8 @@
                     <div
                         class="project-card bg-slate-800 rounded-xl overflow-hidden shadow-lg transform hover:-translate-y-2 transition-all duration-300 reveal group">
                         <div class="relative">
-                            <img src="photos/e commerece.png" alt="E-commerce Platform Screenshot" class="w-full h-48 object-cover object-top" />
+                            <img src="photos/e commerece.png" alt="E-commerce Platform Screenshot"
+                                class="w-full h-48 object-cover object-top" />
                             <div
                                 class="absolute inset-0 bg-gradient-to-t from-slate-900 to-transparent opacity-0 group-hover:opacity-100 transition-opacity">
                             </div>
@@ -249,7 +256,8 @@
                     <div
                         class="project-card bg-slate-800 rounded-xl overflow-hidden shadow-lg transform hover:-translate-y-2 transition-all duration-300 reveal group">
                         <div class="relative">
-                            <img src="photos/taskmanager.png" alt="Task Management App Screenshot" class="w-full h-48 object-cover object-top" />
+                            <img src="photos/taskmanager.png" alt="Task Management App Screenshot"
+                                class="w-full h-48 object-cover object-top" />
                             <div
                                 class="absolute inset-0 bg-gradient-to-t from-slate-900 to-transparent opacity-0 group-hover:opacity-100 transition-opacity">
                             </div>
@@ -277,7 +285,8 @@
                     <div
                         class="project-card bg-slate-800 rounded-xl overflow-hidden shadow-lg transform hover:-translate-y-2 transition-all duration-300 reveal group">
                         <div class="relative">
-                            <img src="photos/furqan porfolio.png" alt="Portfolio Website Screenshot" class="w-full h-48 object-cover object-top" />
+                            <img src="photos/furqan porfolio.png" alt="Portfolio Website Screenshot"
+                                class="w-full h-48 object-cover object-top" />
                             <div
                                 class="absolute inset-0 bg-gradient-to-t from-slate-900 to-transparent opacity-0 group-hover:opacity-100 transition-opacity">
                             </div>
@@ -326,7 +335,8 @@
                             </div>
                             <div>
                                 <h3 class="text-xl font-semibold text-white mb-2">Google Cloud Certificate</h3>
-                                <p class="text-slate-400 mb-4">Completed the Google Cloud Introduction to Generative AI Studio Program with distinction.</p>
+                                <p class="text-slate-400 mb-4">Completed the Google Cloud Introduction to Generative AI
+                                    Studio Program with distinction.</p>
                                 <a href="photos/gen ai (gcloud).jpg" target="_blank"
                                     class="text-indigo-400 hover:text-indigo-300 font-semibold inline-flex items-center">
                                     View Certificate <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
@@ -359,7 +369,9 @@
                             </div>
                             <div>
                                 <h3 class="text-xl font-semibold text-white mb-2">Quantum Computing Certificate</h3>
-                                <p class="text-slate-400 mb-4">Completed hands-on Quantum Computing course organized by Indian Institute of Technology, Roorkee with support of Ministry of Electronics and Information Technology, Government of India (1 month).</p>
+                                <p class="text-slate-400 mb-4">Completed hands-on Quantum Computing course organized by
+                                    Indian Institute of Technology, Roorkee with support of Ministry of Electronics and
+                                    Information Technology, Government of India (1 month).</p>
                                 <a href="photos/quantum computing.jpg" target="_blank"
                                     class="text-indigo-400 hover:text-indigo-300 font-semibold inline-flex items-center">
                                     View Certificate <i data-lucide="arrow-right" class="w-4 h-4 ml-2"></i>
@@ -720,10 +732,12 @@ EXPERIENCE SECTION
                 <div class="text-center">
                     <h4 class="text-lg font-semibold text-white mb-4">Connect</h4>
                     <div class="flex space-x-4 justify-center">
-                        <a href="https://github.com/Furqantech1" class="text-slate-400 hover:text-indigo-400 transition-colors">
+                        <a href="https://github.com/Furqantech1"
+                            class="text-slate-400 hover:text-indigo-400 transition-colors">
                             <i data-lucide="github" class="w-6 h-6"></i>
                         </a>
-                        <a href="https://linkedin.com/in/furqan-naikwadi-7860f" class="text-slate-400 hover:text-indigo-400 transition-colors">
+                        <a href="https://linkedin.com/in/furqan-naikwadi-7860f"
+                            class="text-slate-400 hover:text-indigo-400 transition-colors">
                             <i data-lucide="linkedin" class="w-6 h-6"></i>
                         </a>
                         <a href="https://twitter.com" class="text-slate-400 hover:text-indigo-400 transition-colors">
@@ -764,164 +778,9 @@ EXPERIENCE SECTION
     - Smooth scroll for anchor links
     ============================================
     -->
-    <script>
-        document.addEventListener('DOMContentLoaded', () => {
-            // Initialize Lucide icons
-            lucide.createIcons();
+    <!-- External JS -->
+    <script src="script.js"></script>
 
-            // --- Mobile Menu Toggle ---
-            const mobileMenuButton = document.getElementById('mobile-menu-button');
-            const mobileMenu = document.getElementById('mobile-menu');
-            const menuIcon = mobileMenuButton.querySelector('i');
-
-            mobileMenuButton.addEventListener('click', () => {
-                mobileMenu.classList.toggle('hidden');
-                // Change icon based on menu state
-                if (mobileMenu.classList.contains('hidden')) {
-                    menuIcon.setAttribute('data-lucide', 'menu');
-                } else {
-                    menuIcon.setAttribute('data-lucide', 'x');
-                }
-                lucide.createIcons(); // Re-render icons
-            });
-
-            // Close mobile menu when a link is clicked
-            mobileMenu.addEventListener('click', (event) => {
-                if (event.target.tagName === 'A') {
-                    mobileMenu.classList.add('hidden');
-                    menuIcon.setAttribute('data-lucide', 'menu');
-                    lucide.createIcons();
-                }
-            });
-
-            // --- Sticky Header ---
-            const header = document.getElementById('header');
-            window.addEventListener('scroll', () => {
-                if (window.scrollY > 50) {
-                    header.classList.add('shadow-md');
-                } else {
-                    header.classList.remove('shadow-md');
-                }
-            });
-
-            // --- Scroll to Top Button ---
-            const scrollToTopBtn = document.getElementById('scrollToTopBtn');
-
-            window.addEventListener('scroll', () => {
-                if (window.scrollY > 300) {
-                    scrollToTopBtn.classList.remove('hidden');
-                } else {
-                    scrollToTopBtn.classList.add('hidden');
-                }
-            });
-
-            scrollToTopBtn.addEventListener('click', () => {
-                window.scrollTo({
-                    top: 0,
-                    behavior: 'smooth'
-                });
-            });
-
-            // --- Scroll-triggered Animations ---
-            const revealElements = document.querySelectorAll('.reveal');
-
-            const observer = new IntersectionObserver((entries) => {
-                entries.forEach(entry => {
-                    if (entry.isIntersecting) {
-                        entry.target.classList.add('visible');
-                        observer.unobserve(entry.target);
-
-                        // Animate skill bars
-                        if (entry.target.id === 'skills') {
-                            document.querySelectorAll('.skill-progress').forEach(bar => {
-                                const width = bar.style.width;
-                                bar.style.width = '0';
-                                setTimeout(() => {
-                                    bar.style.width = width;
-                                }, 300);
-                            });
-                        }
-                    }
-                });
-            }, {
-                threshold: 0.1 // Trigger when 10% of the element is visible
-            });
-
-            revealElements.forEach(element => {
-                observer.observe(element);
-            });
-
-            // --- Smooth Scroll for Anchor Links ---
-            document.querySelectorAll('a[href^="#"]').forEach(anchor => {
-                anchor.addEventListener('click', function (e) {
-                    e.preventDefault();
-
-                    const targetId = this.getAttribute('href');
-                    const targetElement = document.querySelector(targetId);
-
-                    if (targetElement) {
-                        targetElement.scrollIntoView({
-                            behavior: 'smooth'
-                        });
-                    }
-                });
-            });
-
-            // --- Theme Toggle ---
-            const themeToggle = document.getElementById('theme-toggle');
-            const themeIcon = document.getElementById('theme-icon');
-            const html = document.documentElement;
-
-            // Check for saved theme preference or respect OS preference
-            const savedTheme = localStorage.getItem('theme');
-            const prefersDark = window.matchMedia('(prefers-color-scheme: dark)').matches;
-
-            if (savedTheme === 'dark' || (!savedTheme && prefersDark)) {
-                html.classList.add('dark');
-                themeIcon.setAttribute('data-lucide', 'moon');
-            } else {
-                html.classList.remove('dark');
-                themeIcon.setAttribute('data-lucide', 'sun');
-            }
-            lucide.createIcons();
-
-            themeToggle.addEventListener('click', () => {
-                html.classList.toggle('dark');
-
-                if (html.classList.contains('dark')) {
-                    themeIcon.setAttribute('data-lucide', 'moon');
-                    localStorage.setItem('theme', 'dark');
-                } else {
-                    themeIcon.setAttribute('data-lucide', 'sun');
-                    localStorage.setItem('theme', 'light');
-                }
-
-                lucide.createIcons();
-            });
-
-            // --- Form Validation ---
-            const contactForm = document.querySelector('form');
-            if (contactForm) {
-                contactForm.addEventListener('submit', (e) => {
-                    e.preventDefault();
-
-                    // Get form values
-                    const name = document.getElementById('name').value;
-                    const email = document.getElementById('email').value;
-                    const message = document.getElementById('message').value;
-
-                    // Simple validation
-                    if (name && email && message) {
-                        // Show success message
-                        alert('Message sent successfully! I\'ll get back to you soon.');
-                        contactForm.reset();
-                    } else {
-                        alert('Please fill in all fields.');
-                    }
-                });
-            }
-        });
-    </script>
 </body>
 
 </html>
