--- a/index.html
+++ b/index.html
@@ -57,22 +57,39 @@
                 </div>
             </div>
         </div>
-        <div id="mobile-menu" class="hidden md:hidden">
-            <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3 glass">
-                <a href="#about"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-slate-300 hover:bg-slate-700 hover:text-white">About</a>
-                <a href="#projects"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-slate-300 hover:bg-slate-700 hover:text-white">Projects</a>
-                <a href="#skills"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-slate-300 hover:bg-slate-700 hover:text-white">Skills</a>
-                <a href="#experience"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-slate-300 hover:bg-slate-700 hover:text-white">Experience</a>
-                <a href="#certificates"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-slate-300 hover:bg-slate-700 hover:text-white">Certificates</a>
-                <a href="#contact"
-                    class="block px-3 py-2 rounded-md text-base font-medium text-slate-300 hover:bg-slate-700 hover:text-white">Contact</a>
+        <div id="mobile-menu" class="md:hidden absolute top-full w-full z-50">
+            <div class="px-4 pt-4 pb-6 space-y-2 sm:px-6 
+              bg-gradient-to-b from-slate-900/90 via-slate-800/80 to-slate-900/90 
+              dark:bg-gradient-to-b dark:from-slate-900/90 dark:via-slate-800/80 dark:to-slate-900/90 
+              backdrop-blur-md shadow-xl rounded-b-xl transition-all">
+
+                <a href="#about" class="block px-4 py-2 rounded-md text-base font-medium 
+              text-white hover:text-indigo-300 transition">
+                    About
+                </a>
+                <a href="#projects" class="block px-4 py-2 rounded-md text-base font-medium 
+              text-white hover:text-indigo-300 transition">
+                    Projects
+                </a>
+                <a href="#skills" class="block px-4 py-2 rounded-md text-base font-medium 
+              text-white hover:text-indigo-300 transition">
+                    Skills
+                </a>
+                <a href="#experience" class="block px-4 py-2 rounded-md text-base font-medium 
+              text-white hover:text-indigo-300 transition">
+                    Experience
+                </a>
+                <a href="#certificates" class="block px-4 py-2 rounded-md text-base font-medium 
+              text-white hover:text-indigo-300 transition">
+                    Certificates
+                </a>
+                <a href="#contact" class="block px-4 py-2 rounded-md text-base font-medium 
+              text-white hover:text-indigo-300 transition">
+                    Contact
+                </a>
             </div>
         </div>
+
     </header>
 
     <main>
