--- a/index.html
+++ b/index.html
@@ -672,10 +672,10 @@ EXPERIENCE SECTION
         </section>
 
         <!-- 
-        ============================================
-        CONTACT SECTION
-        ============================================
-        -->
+============================================
+CONTACT SECTION
+============================================
+-->
         <section id="contact" class="py-20 sm:py-32 gradient-bg-about">
             <div class="container mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center mb-12 reveal">
@@ -683,32 +683,44 @@ EXPERIENCE SECTION
                     <p class="mt-4 text-lg text-slate-400">Have a project in mind or just want to say hi? Feel free to
                         reach out.</p>
                 </div>
+
                 <div class="max-w-xl mx-auto reveal">
-                    <form action="#" method="POST" class="space-y-6">
+                    <form action="https://formspree.io/f/xeozevrw" method="POST" class="space-y-6">
+
+                        <!-- Name -->
                         <div class="relative">
-                            <input type="text" name="name" id="name" autocomplete="name" required
-                                class="w-full px-4 py-3 bg-slate-800 border border-slate-700 rounded-md text-white focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none peer"
-                                placeholder=" ">
-                            <label for="name"
-                                class="absolute left-4 top-3 text-slate-500 transition-all duration-300 peer-focus:-top-3 peer-focus:text-xs peer-focus:text-indigo-400 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base">Your
-                                Name</label>
+                            <input type="text" name="name" id="name" required placeholder="Your Name"
+                                class="peer w-full px-4 pt-6 pb-2 bg-slate-800 text-white border border-slate-700 rounded-md placeholder-transparent focus:outline-none focus:ring-2 focus:ring-indigo-500" />
+                            <label for="name" class="absolute left-4 top-2 text-slate-400 text-sm transition-all duration-300 ease-in-out
+                            peer-placeholder-shown:top-4 peer-placeholder-shown:text-base peer-placeholder-shown:text-slate-500
+                            peer-focus:top-2 peer-focus:text-sm peer-focus:text-indigo-400">
+                                Your Name
+                            </label>
                         </div>
+
+                        <!-- Email -->
                         <div class="relative">
-                            <input type="email" name="email" id="email" autocomplete="email" required
-                                class="w-full px-4 py-3 bg-slate-800 border border-slate-700 rounded-md text-white focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none peer"
-                                placeholder=" ">
-                            <label for="email"
-                                class="absolute left-4 top-3 text-slate-500 transition-all duration-300 peer-focus:-top-3 peer-focus:text-xs peer-focus:text-indigo-400 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base">Your
-                                Email</label>
+                            <input type="email" name="email" id="email" required placeholder="Your Email"
+                                class="peer w-full px-4 pt-6 pb-2 bg-slate-800 text-white border border-slate-700 rounded-md placeholder-transparent focus:outline-none focus:ring-2 focus:ring-indigo-500" />
+                            <label for="email" class="absolute left-4 top-2 text-slate-400 text-sm transition-all duration-300 ease-in-out
+                            peer-placeholder-shown:top-4 peer-placeholder-shown:text-base peer-placeholder-shown:text-slate-500
+                            peer-focus:top-2 peer-focus:text-sm peer-focus:text-indigo-400">
+                                Your Email
+                            </label>
                         </div>
+
+                        <!-- Message -->
                         <div class="relative">
-                            <textarea id="message" name="message" rows="4" required
-                                class="w-full px-4 py-3 bg-slate-800 border border-slate-700 rounded-md text-white focus:ring-2 focus:ring-indigo-500 focus:border-indigo-500 outline-none peer"
-                                placeholder=" "></textarea>
-                            <label for="message"
-                                class="absolute left-4 top-3 text-slate-500 transition-all duration-300 peer-focus:-top-3 peer-focus:text-xs peer-focus:text-indigo-400 peer-placeholder-shown:top-3 peer-placeholder-shown:text-base">Your
-                                Message</label>
+                            <textarea name="message" id="message" rows="4" required placeholder="Your Message"
+                                class="peer w-full px-4 pt-6 pb-2 bg-slate-800 text-white border border-slate-700 rounded-md placeholder-transparent focus:outline-none focus:ring-2 focus:ring-indigo-500"></textarea>
+                            <label for="message" class="absolute left-4 top-2 text-slate-400 text-sm transition-all duration-300 ease-in-out
+                            peer-placeholder-shown:top-4 peer-placeholder-shown:text-base peer-placeholder-shown:text-slate-500
+                            peer-focus:top-2 peer-focus:text-sm peer-focus:text-indigo-400">
+                                Your Message
+                            </label>
                         </div>
+
+                        <!-- Submit Button -->
                         <div>
                             <button type="submit"
                                 class="w-full bg-indigo-600 text-white font-semibold px-6 py-3 rounded-md hover:bg-indigo-700 transition-all duration-300 transform hover:scale-105 flex items-center justify-center gap-2">
@@ -716,10 +728,19 @@ EXPERIENCE SECTION
                                 Send Message
                             </button>
                         </div>
+
+                        <!-- Success Message -->
+                        <div id="form-success"
+                            class="hidden text-center text-green-400 font-semibold mt-4 animate-pulse">
+                            ✅ Message sent successfully!
+                        </div>
+
                     </form>
                 </div>
             </div>
         </section>
+
+
     </main>
 
     <!-- 
